fix(): accessibility contrast ratio

--- a/src/components/app-cta/app-cta.scss
+++ b/src/components/app-cta/app-cta.scss
@@ -73,7 +73,7 @@
   }
 
   button {
-    background-color: $orange-dark;
+    background-color: $gray-dark;
     border: 0.75px solid #ffffff;
     border-radius: 16px;
     box-shadow: 0 2px 4px 0 rgba(128, 128, 128, 0.5);
